tests/machine/x/cobol/record_assign.error
/tmp/TestCobolCompiler_VMValid_Golden2638179460/042/prog.cob:13: error: syntax error, unexpected USING
/tmp/TestCobolCompiler_VMValid_Golden2638179460/042/prog.cob: in paragraph 'FN_INC':
/tmp/TestCobolCompiler_VMValid_Golden2638179460/042/prog.cob:18: error: syntax error, unexpected PROCEDURE
