tests/machine/x/cobol/record_assign.cob
*> Generated by Mochi compiler v0.10.27 on 2025-07-17T11:45:42Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. RECORD-ASSIGN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 FN-INC-RES PIC 9 VALUE 0.
       01 C.
           05 N PIC 9 VALUE 0.
       01 TMP PIC S9(9) VALUE 0.
       01 TMP-STR PIC Z(18).
       PROCEDURE DIVISION.
       PERFORM FN_INC USING C
       DISPLAY N
       STOP RUN.
       
       FN_INC.
           PROCEDURE DIVISION USING C.
               COMPUTE N = N + 1
               EXIT.
